--- a/sdk-typescript/.speakeasy/gen.yaml
+++ b/sdk-typescript/.speakeasy/gen.yaml
@@ -2,7 +2,7 @@ configVersion: 2.0.0
 generation:
   devContainers:
     enabled: true
-    schemaPath: './openapi.yaml '
+    schemaPath: openapi.yaml
   sdkClassName: Sdk
   maintainOpenAPIOrder: true
   usageSnippets:
@@ -14,8 +14,9 @@ generation:
     requestResponseComponentNamesFeb2024: true
   auth:
     oAuth2ClientCredentialsEnabled: true
+    oAuth2PasswordEnabled: true
 typescript:
-  version: 0.0.1
+  version: 0.1.0
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
@@ -23,9 +24,13 @@ typescript:
   additionalPackageJSON: {}
   author: Speakeasy
   clientServerStatusCodesAsErrors: true
+  defaultErrorName: APIError
+  enableCustomCodeRegions: false
+  enableReactQuery: false
   enumFormat: union
   envVarPrefix: SDK
   flattenGlobalSecurity: true
+  flatteningOrder: parameters-first
   imports:
     option: openapi
     paths:
